# domishot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/domishot.egg-info/: PKG-INFO  entry_points.txt
src/webshot.egg-info/: PKG-INFO
