[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domishot"
version = "0.1.0"
description = "Capture a specific DOM element from any web page as an image (Playwright-first, Selenium fallback)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Eric Moral" }]
keywords = ["screenshot", "playwright", "selenium", "automation", "web"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = []

[project.optional-dependencies]
playwright = ["playwright>=1.45"]
selenium  = ["selenium>=4.12", "webdriver-manager>=4.0"]

[project.scripts]
domishot = "domishot.cli:main"
# Optional back-compat alias (keep if you want the old command to still work):
webshot = "domishot.cli:main"

[project.urls]
Homepage = "https://example.com/domishot"
Repository = "https://github.com/your-user-or-org/domishot"
Issues = "https://github.com/your-user-or-org/domishot/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["domishot"]
# Or auto-discover:
# [tool.setuptools.packages.find]
# where = ["src"]
